@@ -45,6 +45,7 @@ Returns a new DPKG::Log::Analyse::Package object.
 =cut
 sub new {
     my $package = shift;
+    $package = ref($package) if ref($package);
 
     my %params = validate(
         @_, {
